docs: add/update frontend .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,12 @@
-# Base URL of the backend Vercel deployment (no trailing slash)
-VITE_API_BASE_URL=https://glowforge-ai-backend.vercel.app
+# Glowforge Portrait Engraver – Frontend Wizard
+# Vite React/TypeScript SPA.
+#
+# Copy this file to `.env.local` at the repo root for local development.
+# Vercel deployments should set the same variable in the project settings.
+
+# Base URL for the backend AI gateway (no trailing slash).
+# For local dev, you might run the backend on localhost:
+VITE_API_BASE_URL=http://localhost:3000
+
+# For hitting the deployed backend while running Vite dev, you can instead use:
+# VITE_API_BASE_URL=https://glowforge-ai-backend.vercel.app
